Corrige import em App.tsx e remove import circular em page.tsx

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "homepage": "https://github.com/patrickprod/gerador-de-assinaturas",
+ "homepage": "https://patrickprod.github.io/gerador-de-assinaturas/",
   "name": "react_repo",
   "private": true,
   "version": "0.0.0",
